Implement error handling for blog post API fetch, adjust whole page media queries

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;800&display=swap"
       rel="stylesheet"
     />
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script
       src="https://kit.fontawesome.com/fc41b503ab.js"
       crossorigin="anonymous"
     ></script>
-
     <script src="index.js"></script>
   </head>
 
@@ -56,6 +56,13 @@
         <div class="bod">
           <div id="about" class="section about">
             <section>
+              <img
+                class="photo-small-screen"
+                src="./assets/circle-cropped.png"
+                alt="Stephanie sporting a cheesy grin"
+                width="200
+                          "
+              />
               <h1>
                 <span aria-hidden="true"> < </span>
                 Stephanie Thornley
