Fix ajax error handling issue

--- a/index.html
+++ b/index.html
@@ -501,7 +501,9 @@
           <div id="blog" class="section blog">
             <section>
               <h2>BLOG</h2>
-              <div class="articles"></div>
+              <div class="articles">
+                <p id="loading-articles">Loading articles...</p>
+              </div>
             </section>
           </div>
 
