Update aria labels and final styling

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <main>
         <div id="bod">
-          <div id="float-social-logos">
+          <div id="fixed-social-logos">
             <a
               href="https://github.com/thorners55"
               target="_blank"
@@ -65,7 +65,7 @@
                 data-name="Layer 1"
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 100 100"
-                fill="#03a090"
+                fill="#eb4034"
                 class="logo"
                 alt="GitHub logo"
               >
@@ -86,7 +86,7 @@
                 data-name="Layer 1"
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 100 100"
-                fill="#03a090"
+                fill="#eb4034"
                 class="logo"
               >
                 <path
@@ -110,7 +110,7 @@
                 data-name="Layer 1"
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 100 100"
-                fill="#03a090"
+                fill="#eb4034"
                 class="logo"
                 alt="Twitter logo"
               >
@@ -131,7 +131,7 @@
                 data-name="Layer 1"
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 100 100"
-                fill="#03a090"
+                fill="#eb4034"
                 class="logo"
                 alt="LinkedIn logo"
               >
@@ -151,8 +151,10 @@
                 width="200
                           "
               />
-              <h1>STEPHANIE THORNLEY</h1>
-              <h2 class="screen-reader-only">- About -</h2>
+              <h1 aria-label="Stephanie Thornley">
+                STEPHANIE THORNLEY
+              </h1>
+              <h2 class="screen-reader-only">About</h2>
               <p class="blurb">
                 Hello! I'm Stephanie, a hopeful Junior Software
                 Developer from Leeds.<br />
@@ -172,7 +174,9 @@
 
           <div id="skills" class="section skills">
             <section>
-              <h2>SKILLS AND EXPERIENCE</h2>
+              <h2 aria-label="Skills and Experience">
+                SKILLS AND EXPERIENCE
+              </h2>
               <button
                 aria-expanded="false"
                 aria-controls="tech-skills"
@@ -346,19 +350,19 @@
 
           <div id="projects" class="section">
             <section>
-              <h2>PROJECTS</h2>
+              <h2 aria-label="Projects">PROJECTS</h2>
               <div class="container">
                 <div class="card shadow-card">
                   <h3>Budding</h3>
                   <ul class="project-tech">
                     <li>JavaScript,</li>
-                    <li>Node.js,</li>
                     <li>React Native,</li>
                     <li>Expo,</li>
                     <li>PostgreSQL,</li>
                     <li>AWS S3,</li>
                     <li>Express.js,</li>
-                    <li>CSS</li>
+                    <li>CSS,</li>
+                    <li>Node.js</li>
                   </ul>
                   <p>
                     Budding is an app for measuring and tracking the
@@ -431,10 +435,10 @@
                     <li>JavaScript,</li>
                     <li>React,</li>
                     <li>PostgreSQL,</li>
-                    <li>Node.js,</li>
                     <li>Axios,</li>
                     <li>Jest,</li>
-                    <li>CSS</li>
+                    <li>CSS,</li>
+                    <li>Node.js</li>
                   </ul>
                   <p>
                     A Reddit-style discussion website with articles
@@ -500,7 +504,7 @@
 
           <div id="blog" class="section blog">
             <section>
-              <h2>BLOG</h2>
+              <h2 aria-label="Blog">BLOG</h2>
               <div class="articles">
                 <p id="loading-articles">Loading articles...</p>
               </div>
@@ -511,7 +515,7 @@
 
           <div id="contact" class="section contact">
             <section>
-              <h2>CONTACT</h2>
+              <h2 aria-label="Contact">CONTACT</h2>
               <p>
                 Feel free to get in touch using the secure form, or
                 reach out on LinkedIn or Twitter!
@@ -527,7 +531,7 @@
                     data-name="Layer 1"
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 100 100"
-                    fill="#03a090"
+                    fill="#eb4034"
                     class="logo"
                     alt="GitHub logo"
                   >
@@ -548,7 +552,7 @@
                     data-name="Layer 1"
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 100 100"
-                    fill="#03a090"
+                    fill="#eb4034"
                     class="logo"
                   >
                     <path
@@ -572,7 +576,7 @@
                     data-name="Layer 1"
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 100 100"
-                    fill="#03a090"
+                    fill="#eb4034"
                     class="logo"
                     alt="Twitter logo"
                   >
@@ -593,7 +597,7 @@
                     data-name="Layer 1"
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 100 100"
-                    fill="#03a090"
+                    fill="#eb4034"
                     class="logo"
                     alt="LinkedIn logo"
                   >
