Add README, organise files

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1"
     />
     <title>Stephanie Thornley's Portfolio Site</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./index.css" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Asap&display=swap"
@@ -24,7 +24,7 @@
       src="https://kit.fontawesome.com/fc41b503ab.js"
       crossorigin="anonymous"
     ></script>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </head>
 
   <body>
@@ -33,7 +33,7 @@
         <div id="side-section">
           <img
             class="photo"
-            src="./assets/circle-cropped.png"
+            src="../assets/images/circle-cropped.png"
             alt="Stephanie sporting a cheesy grin"
             width="200
             "
@@ -146,7 +146,7 @@
             <section>
               <img
                 class="photo-small-screen"
-                src="./assets/circle-cropped.png"
+                src="../assets/images/circle-cropped.png"
                 alt="Stephanie sporting a cheesy grin"
                 width="200
                           "
@@ -403,7 +403,7 @@
                       </p>
 
                       <img
-                        src="assets/budding-muted.gif"
+                        src="../assets/project-demos/budding-muted.gif"
                         alt="gif showing a demonstration of the Budding app"
                         class="mobile-gif"
                       />
@@ -471,7 +471,7 @@
                     </p>
 
                     <img
-                      src="assets/Northcoders-News.gif"
+                      src="../assets/project-demos/Northcoders-News.gif"
                       alt="gif showing a demonstration of my Northcoders News site"
                       class="desktop-gif"
                     />
@@ -719,7 +719,7 @@
       </footer>
     </div>
     <button id="scroll-top-button" title="Go to top">
-      <span class="fas fa-arrow-up"></span>
+      <span class="fas fa-arrow-up arrow"></span>
     </button>
   </body>
 </html>
