Fix safari styling on scroll top button and change Netlify source folder

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
         <div id="side-section">
           <img
             class="photo"
-            src="../assets/images/circle-cropped.png"
+            src="./assets/images/circle-cropped.png"
             alt="Stephanie sporting a cheesy grin"
             width="200
             "
@@ -146,7 +146,7 @@
             <section>
               <img
                 class="photo-small-screen"
-                src="../assets/images/circle-cropped.png"
+                src="./assets/images/circle-cropped.png"
                 alt="Stephanie sporting a cheesy grin"
                 width="200
                           "
@@ -403,7 +403,7 @@
                       </p>
 
                       <img
-                        src="../assets/project-demos/budding-muted.gif"
+                        src="./assets/project-demos/budding-muted.gif"
                         alt="gif showing a demonstration of the Budding app"
                         class="mobile-gif"
                       />
@@ -471,7 +471,7 @@
                     </p>
 
                     <img
-                      src="../assets/project-demos/Northcoders-News.gif"
+                      src="./assets/project-demos/Northcoders-News.gif"
                       alt="gif showing a demonstration of my Northcoders News site"
                       class="desktop-gif"
                     />
