Update form to clear input on submit and add Message submitted below submit button

--- a/src/index.html
+++ b/src/index.html
@@ -702,6 +702,9 @@
                 </p>
 
                 <button type="submit">Submit</button>
+                <p id="submitted-message" aria-hidden="true">
+                  Message submitted!
+                </p>
               </form>
             </section>
           </div>
